--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styl.css">
 </head>
-<body style="background-color: white;">
-    <button type="button" data-action="start">Start
+<body>
+   <div class="wrap">
+        <button id="MyButton" type="button" data-action="start">Start
         <span></span>
         <span></span>
         <span></span>
         <span></span>
     </button>
 <button type="button" data-action="stop">Stop
-    <span></span>
+        <span></span>
         <span></span>
         <span></span>
         <span></span>
 </button>
+   </div>
 <script src="./color.js"></script>
 </body>
 </html>
